<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/homeCoverImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/cover_image"
        android:scaleType="centerCrop"
        android:tintMode="src_over"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homecover"
        app:tint="#66000000" />


    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif-light"
        android:letterSpacing="0.08"
        android:text="@string/welcome_to"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.08"
        android:text="@string/appName"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/registrationText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameText">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedFirstnameField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/firstnameHint"
            android:textColorHint="@android:color/black"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@android:color/black"
            app:counterTextColor="@android:color/black"
            app:endIconTint="@android:color/black"
            app:helperTextTextColor="@android:color/black"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:hintTextColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firsnameInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedLastnameField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/lastnameHint"
            android:textColorHint="@android:color/black"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@android:color/black"
            app:counterTextColor="@android:color/black"
            app:endIconTint="@android:color/black"
            app:helperTextTextColor="@android:color/black"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:hintTextColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastnameInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/registrationText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="20dp"
        android:letterSpacing="0.05"
        android:text="@string/registration"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/user_icon"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="#00AED0"
        android:letterSpacing="0.06"
        android:padding="15dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>