<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.RegistrationActivity">

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        app:tint="#000000" />

    <TextView
        android:id="@+id/registrationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="5dp"
        android:letterSpacing="0.01"
        android:text="@string/registration_title"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backIcon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="14dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationTitle">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedRegFirstnameField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="14dp"
            android:hint="@string/firstnameHint"
            android:textColorHint="@android:color/black"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@android:color/black"
            app:counterTextColor="@android:color/black"
            app:endIconTint="@android:color/black"
            app:helperTextTextColor="@android:color/black"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:hintTextColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regFirstnameInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedRegLastnameField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="14dp"
            android:hint="@string/lastnameHint"
            android:textColorHint="@android:color/black"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@android:color/black"
            app:counterTextColor="@android:color/black"
            app:endIconTint="@android:color/black"
            app:helperTextTextColor="@android:color/black"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:hintTextColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regLastnameInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedRegPinField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/your_pin"
            android:textColorHint="@android:color/black"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@android:color/black"
            app:counterTextColor="@android:color/black"
            app:endIconTint="@android:color/black"
            app:helperTextTextColor="@android:color/black"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:hintTextColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regPinInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTint="@android:color/black"
                android:inputType="numberPassword"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="#00AED0"
        android:letterSpacing="0.06"
        android:padding="15dp"
        android:text="@string/register"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>