<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".transactions.TransactionsActivity">

    <ImageView
        android:id="@+id/logoutIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:contentDescription="@string/logout_icon"
        app:layout_constraintBottom_toTopOf="@+id/view_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_logout_24"
        app:tint="#000000" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="14dp"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.01"
        android:text="Emanuel"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/view_pager"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/userLastName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.01"
        android:text="Radotović"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/userName"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="14dp"
        android:background="#434343"
        android:elevation="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userLastName">

    </androidx.viewpager2.widget.ViewPager2>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:elevation="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/view_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/slider1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/slider1"
                tools:src="@color/white" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/slider2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/slider2"
                tools:src="@color/white" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="10dp"
            android:layout_height="10dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/slider3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/slider3"
                tools:src="@color/white" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_pager" />

    <ImageView
        android:id="@+id/sortIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="13dp"
        android:contentDescription="@string/sort_icon"
        android:elevation="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/view_pager"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:srcCompat="@drawable/ic_baseline_swap_vert_24"
        app:tint="#FFFFFF" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="#00AED0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
